--- a/ESR-Technical-Documentation/CCCForage.qmd
+++ b/ESR-Technical-Documentation/CCCForage.qmd
@@ -1,3 +1,7 @@
+---
+bibliography: esr-bibliography.bib
+---
+
 # Central California Current Forage
 
 **Description** The Central CCE forage survey (known as the Rockfish Recruitment and Ecosystem Assessment Survey, RREAS) samples much of the West Coast each May to mid-June, using midwater trawls sampling between 30 and 45 m depths during nighttime hours. The survey targets young-of-the-year (YOY) rockfish species and a variety of other YOY and adult forage species, market squid, adult krill, and gelatinous zooplankton. Juvenile rockfish, anchovy, krill, and market squid are among the most important prey for CCE predators (@szoboszlai2015forage). Time series presented here are from the "Core Area" of that survey, centered off Monterey Bay. Catch data were standardized by using a delta-GLM to estimate year effects while accounting for spatial and temporal covariates to yield relative abundance indices, shown with their approximate 95% confidence limits (@santora2021diverse). The 2023 survey effort in the "Core Area" was comparable to previous years, apart from 2020.
