--- a/ESR-Technical-Documentation/ChinookSalmonEcosystemCalifornia.qmd
+++ b/ESR-Technical-Documentation/ChinookSalmonEcosystemCalifornia.qmd
@@ -1,3 +1,7 @@
+---
+bibliography: esr-bibliography.bib
+---
+
 # Chinook Salmon Ecosystem Conditions - California
 
 **Description**. Central Valley Fall Chinook salmon stoplight table: In the 2019-2020 ecosystem status report (REFERENCE), we introduced a relatively simple “stoplight” table of ecosystem indicators that were shown by Friedman et al. (2019) to be correlated with returns of naturally produced Central Valley Fall Chinook salmon. In an updated stoplight chart for adult Fall Chinook salmon returning to the Central Valley in 2024, the focal ecosystem indicators are: spawning escapement of parent generations; egg incubation temperature between October and December at Red Bluff Diversion Dam (Sacramento River); egg thiamine concentrations based on averages of samples collected from Central Valley fall run hatchery programs; median flow in the Sacramento River in the February after fry emergence; and a marine predation index based on the abundance of common murres at Southeast Farallon Island and the proportion of juvenile salmon in their diets. Reflecting discussions with the SSC-ES in September 2020, we emphasize that this stoplight chart is strictly qualitative and contextual decision-support information. Qualitative descriptors (color-coded terms like “very poor”) are based on recent time series and on expert opinion of how a given indicator relates to quantitative analysis of the relationship between the indicator and life-stage specific survival (see Figure 5 in Friedman et al. 2019). For example, in the stoplight Table flows rated "very low" (\<7,000 cfs) are consistent with \<25% rearing/outmigration survival rates, while the flows rated “low” (7,000 to 20,000 cfs) were consistent with 25-50% outmigrant survival (see Fig. 5 in, Friedman et al. 2019). Egg incubation temperatures in the Table were consistent with egg-to-fry survival ranging from \~50% (which we rated as “suboptimal”) to 0% at \> 13 C (“very poor/cohort failure”). We continue to refine these qualitative categories for future reports so that their basis is more explicit.
