--- a/ESR-Technical-Documentation/GroundfishPortAvailability.qmd
+++ b/ESR-Technical-Documentation/GroundfishPortAvailability.qmd
@@ -1,3 +1,7 @@
+---
+bibliography: esr-bibliography.bib
+---
+
 # Groundfish Port Availability
 
 **Description** We estimated the relative availability of groundfish biomass to individual ports following the methods described in Selden et al. (2020), with some exceptions. In brief, we used data from the Northwest Fisheries Science Center’s West Coast Groundfish Bottom Trawl Survey (Keller et al. 2017) to estimate spatial distribution of species-specific biomass (Location Biomass), and the Center of Gravity (CoG) of the Location Biomass. We then calculate the Availability Index for each port by summing the Location Biomass within a radius from that port based on the 75th quantile of the distance traveled from port to harvest of species of interest, weighted by catch, as measured from trawl logbooks. We analyzed 12 species that make up a large component of landings for vessels using bottom trawl gear along the West Coast, or that have broader management interest (e.g., shortbelly rockfish).
